--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	
 		<section>
 	<header class="major">
-		<h2>Ipsum lorem dolor aliquam ante commodo magna sed accumsan arcu neque.</h2>
+		<h2>Short info about me</h2>
 	</header>
-	<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+	<p>I am a mainly Java developer. I am a follower of agile, especially scrum and Acceptance Test Driven Development. I prefer to make microservices in spring-boot. When I do not make a software, I&rsquo;d like to take photos.</p>
 </section>
 
 	
